--- a/client/modules/App/App.css
+++ b/client/modules/App/App.css
@@ -8,3 +8,220 @@
   width: 100px;
   height: 100px;
 }
+
+
+.ingredientPicture {
+
+  width: 100px;
+
+  border-radius: 4px;
+
+  padding: 5px;
+
+  height: 100px;
+
+  border: 1px solid #ddd;
+
+}
+
+
+
+.ingredientLabel {
+
+  text-align: center;
+
+  text-indent: 50px;
+
+  font-size: 20px;
+
+  font-family: "lato";
+
+}
+
+
+
+* {
+
+
+
+  box-sizing: border-box;
+
+
+
+}
+
+
+
+
+
+
+
+body {
+
+
+
+  margin: 0;
+
+
+
+  font-family: Arial;
+
+
+
+}
+
+
+
+
+
+
+
+.incredientsDiv {
+
+
+
+  display: -ms-flexbox; /* IE10 */
+
+
+
+  display: flex;
+
+
+
+  -ms-flex-wrap: wrap; /* IE10 */
+
+
+
+  flex-wrap: wrap;
+
+
+
+  padding: 0 4px;
+
+
+
+}
+
+
+
+
+
+
+
+/* Create four equal columns that sits next to each other */
+
+
+
+.incredientTableCell {
+
+
+
+  -ms-flex: 25%; /* IE10 */
+
+
+
+  flex: 25%;
+
+
+
+  max-width: 25%;
+
+
+
+  padding: 0 4px;
+
+
+
+}
+
+
+
+
+
+
+
+.incredientTableCell img {
+
+
+
+  margin-top: 8px;
+
+
+
+  vertical-align: middle;
+
+
+
+}
+
+
+
+
+
+
+
+/* Responsive layout - makes a two column-layout instead of four columns */
+
+
+
+@media screen and (max-width: 800px) {
+
+
+
+  .incredientTableCell {
+
+
+
+    -ms-flex: 50%;
+
+
+
+    flex: 50%;
+
+
+
+    max-width: 50%;
+
+
+
+  }
+
+
+
+}
+
+
+
+
+
+
+
+/* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
+
+
+
+@media screen and (max-width: 600px) {
+
+
+
+  .incredientTableCell {
+
+
+
+    -ms-flex: 100%;
+
+
+
+    flex: 100%;
+
+
+
+    max-width: 100%;
+
+
+
+  }
+
+
+
+}
